# cvc5

./: DONOTMERGE
src/: CMakeLists.txt  Makefile.am  Makefile.theories
src/context/: cdhashmap.h
src/encoding/: encoding_bitblaster.cpp  encoding_experiments.cpp  encoding_experiments.h
src/expr/: expr_manager_template.cpp  expr_manager_template.h  node.h  node_builder.h  node_manager.h  type.cpp  type.h  type_node.h
src/main/: driver_unified.cpp  options
src/options/: Makefile.am  fp_options
src/parser/smt2/: Smt2.g  smt2.cpp  smt2.h
src/printer/smt2/: smt2_printer.cpp
src/prop/: cnf_stream.cpp  options  sat_solver.h  sat_solver_factory.cpp  sat_solver_factory.h  sat_solver_types.h
src/prop/bvminisat/: bvminisat.cpp  bvminisat.h
src/prop/eminisat/: Makefile.am  eminisat.cpp  eminisat.h
src/smt/: boolean_terms.cpp  smt_engine.cpp
src/symfpu/: Makefile
src/symfpu/applications/: Makefile  cbmcverification.cpp  executable.h  implementations.h  test.cpp
src/symfpu/baseTypes/: Makefile  cvc4_literal.cpp  cvc4_literal.h  cvc4_symbolic.cpp  cvc4_symbolic.h  shared.h  simpleExecutable.cpp  simpleExecutable.h
src/theory/: Makefile.am  logic_info.cpp  theory_engine.cpp  theory_engine.h  theory_model.cpp
src/theory/fp/: Makefile  Makefile.am  README.WHATS-NEXT  fp_converter.cpp  fp_converter.h  fp_word_blaster.cpp  kinds  theory_fp.cpp  theory_fp.h  theory_fp_rewriter.cpp  theory_fp_rewriter.h  theory_fp_type_rules.h  trp_integration.cpp  trp_integration.h  type_enumerator.h
src/util/: Makefile.am  floatingpoint.cpp  floatingpoint.h
(+73 files in other folders)
